Change styles to fix squished comments

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,3 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-}
 
 a {
   color: #00B7FF;
@@ -11,7 +7,14 @@ a {
   visibility: hidden;
 }
 
-.simply-scroll .simply-scroll-list li {
-  min-height: 100px;
+.simply-scroll-list li {
+  min-height: 100px; !important
+  margin-bottom: 50px;
+  margin-top: 50px;
+  height: auto; !important
+}
+
+.simply-scroll-list {
+  min-height: 2000px;
   height: auto;
 }
